# python-project-lvl4

./: .env.example  .flake8  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  Makefile  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: pre-commit.yml  tests.yml
docker-images/backend/: .env.default  Dockerfile
docker-images/postgres/: .env.default
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: create_label.html  delete_label.html  labels_list.html  update_label.html
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: create_status.html  delete_status.html  statuses_list.html  update_status.html
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/templates/: create_task.html  delete_task.html  task_details.html  tasks_list.html  update_task.html
task_manager/templates/: base.html  index.html  login.html
task_manager/templatetags/: custom_filters.py
task_manager/tests/: conftest.py  helpers.py  paths.py  test_label.py  test_status.py  test_task.py  test_user.py
task_manager/tests/fixtures/: expected_pieces_html.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/: create_user.html  delete_user.html  update_user.html  users_list.html
