[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "simple tool for task management"
authors = ["alexandra naumenko <momotav717@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
django-bootstrap5 = "^24.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
gitlint = "^0.19.1"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.2"}

[tool.isort]
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
# Should be: 80 - 1
line_length = 79

[tool.mypy]
python_version = 3.11
strict = true

[tool.django-stubs]
django_settings_module = "task_manager.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
